--- a/F22/Advanced-Interface-using-CSS-COMP2081/Week11/pie-graph.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Week11/pie-graph.html
@@ -11,7 +11,7 @@
     <!-- STEP 1: Create SVG element -->
     <svg viewbox="0 0 400 400"> 
    <circle cx="200" cy="200" r="200" fill="#ccc" />
-   <circle cx="200" cy="200" r="200" fill="#ccc" />
+   <circle cx="200" cy="200" r="200" fill="none" stroke="blue" stroke-width="200" stroke-dasharray="0 0" transform="rotate(-90, 200, 200)" />
 
 
  
