--- a/F22/Advanced-Interface-using-CSS-COMP2081/Week11/pie-graph.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Week11/pie-graph.html
@@ -23,7 +23,7 @@
     <!-- STEP OPTIONAL: Build an inside circle to function a a mask, making the pie chart more of a ring than a pie -->
 
     <!-- STEP 4: Add the text label to the pie chart, then open up css/styles.css for the next step -->
-
+<text x="115" y="230" fill="#333" font-size="100" text-anchor="middle">70%</text>
 
 
     <!-- STEP 10: Connect the JavaScript to the HTML, then proceed to js/charts.js for the next step -->
