--- a/F22/Advanced-Interface-using-CSS-COMP2081/Week11/pie-graph.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Week11/pie-graph.html
@@ -11,7 +11,7 @@
     <!-- STEP 1: Create SVG element -->
     <svg viewbox="0 0 400 400"> 
    <circle cx="200" cy="200" r="200" fill="#ccc" />
-   <circle cx="200" cy="200" r="200" fill="transparent"  stroke-width="200" stroke="blue" stroke-dasharray="0 25" transform="rotate(-90, 200, 200)" />
+   <circle cx="200" cy="200" r="100" fill="transparent"  stroke-width="200" stroke="blue" stroke-dasharray="0 25" transform="rotate(-90, 200, 200)" />
 
 
  
@@ -27,6 +27,7 @@
 
 
     <!-- STEP 10: Connect the JavaScript to the HTML, then proceed to js/charts.js for the next step -->
+    <script src="js/charts.js"></script>
    </svg>
 
     <!-- Thank you to https://mirellavanteulingen.nl/blog/svg-charts-animations.html for the inspiration for this lesson -->
