lab 11 and smartLook

--- a/F22/Advanced-Interface-using-CSS-COMP2081/Week11/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Week11/index.html
@@ -17,9 +17,10 @@
         circle {
             fill: orange;
             /* this workd in chrome, not firefox*/
-            r: 250;
-            cx: 250;
-            cy: 250;
+            x: 50;
+            y: 100;
+            width: 75;
+            height: 75;
         }
         /* STEP 7: Remove the r="250" from the <circle /> element below, then add it to the above rule as well */
         /* STEP 8: Remove the origin coordinates from the <circle /> element below as well and add to the above rule */
