--- a/F22/Advanced-Interface-using-CSS-COMP2081/project/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/project/index.html
@@ -20,6 +20,9 @@
     <!-- Bootstrap CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
+    <!--FontAwesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <!-- Google Fonts-->
     <!--Scripts-->
     <script src="scripts/index.js"></script>
@@ -30,7 +33,40 @@
 
 <body>
 
+    <header>
 
+        <nav class="navbar navbar-expand-md navbar-light bg-transparent">
+            <a class="navbar-brand" href="#"><img src="./images/automoblox_logo.jpg" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#globalNav" aria-controls="globalNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse ms-auto" id="globalNav">
+                <ul class="navbar-nav ms-auto ">
+                    <li class="nav-item me-2 ms-2">
+                        <a class="nav-link" href="#"><i class="fa-solid fa-house"></i> Home</a>
+                    </li>
+                    <li class="nav-item me-2 ms-2">
+                        <a class="nav-link active" href="#"><i class="fa-solid fa-basket-shopping"></i> Shop</a>
+                    </li>
+                    <li class="nav-item  me-2 ms-2">
+                        <a class="nav-link" href="#"><i class="fa-brands fa-leanpub"></i> Learn</a>
+                    </li>
+                    <li class="nav-item  me-2 ms-2">
+                        <a class="nav-link" href="#"><i class="fa-solid fa-car-burst"></i> Play</a>
+                    </li>
+                    <li class="nav-item  me-2 ms-2">
+                        <a class="nav-link" href="#"><i class="fa-solid fa-user"></i> Sign in/up</a>
+                    </li>
+                    <li class="nav-item  me-2 ms-2">
+                        <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i> Your Cart</a>
+                    </li>
+                </ul>
+            </div>
+
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 
 
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
