main layout setup

--- a/F22/Advanced-Interface-using-CSS-COMP2081/project/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/project/index.html
@@ -62,11 +62,15 @@
                     </li>
                 </ul>
             </div>
-
         </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <aside></aside>
+        <section></section>
+        <aside></aside>
+    </main>
+
+    <footer>&copy; Kyle Duffy 2022</footer>
 
 
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
