--- a/F22/Advanced-Interface-using-CSS-COMP2081/project/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/project/index.html
@@ -34,7 +34,6 @@
 <body>
 
     <header>
-
         <nav class="navbar navbar-expand-md navbar-light bg-transparent">
             <a class="navbar-brand" href="#"><img src="./images/automoblox_logo.jpg" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#globalNav" aria-controls="globalNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,21 +63,81 @@
             </div>
         </nav>
     </header>
+    <aside>
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="#">Shop</a></li>
+                <li class="breadcrumb-item"><a href="#">Original Models</a></li>
+                <li class="breadcrumb-item active" aria-current="page">cars</li>
+            </ol>
+        </nav>
+
+    </aside>
     <main>
-        <aside></aside>
-        <section></section>
-        <aside></aside>
+        <aside>
+            <nav id="pageNav">
+                <ul class="nav flex-column">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Original Models</a>
+                        <ul class="dropdown-menu nav-item">
+                            <li><a class="dropdown-item nav-link" href="#">Cars</a></li>
+                            <li><a class="dropdown-item nav-link" href="#">Parts</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Mini's</a>
+                        <ul class="dropdown-menu nav-item">
+                            <li><a class="dropdown-item nav-link" href="#">Cars</a></li>
+                            <li><a class="dropdown-item nav-link" href="#">Parts</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Apparel</a>
+                    </li>
+                </ul>
+            </nav>
+            <article class="leftAsideAd">
+
+            </article>
+        </aside>
+        <section>
+            <h2>Shop Original Automoblox Sets</h2>
+            <section>
+                <div></div>
+
+
+
+            </section>
+        </section>
+        <aside>
+            <ul class="nav flex-column nav-pills">
+                <super style="width:100%; text-align:center; padding-bottom:2%;"><u>these links actually work</u></super>
+                <li class="nav-item ">
+                    <a class="nav-link active " href="# ">Active</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link " href="# ">Link</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link " href="# ">Link</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link disabled " href="# ">Disabled</a>
+                </li>
+            </ul>
+        </aside>
     </main>
 
     <footer>&copy; Kyle Duffy 2022</footer>
 
 
-    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="js/vendor/modernizr-3.11.2.min.js "></script>
+    <script src="js/plugins.js "></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js "></script>
     <!-- Bootstrap JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js " integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3 " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js " integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk " crossorigin="anonymous "></script>
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
         window.ga = function() {
@@ -91,7 +150,7 @@
         ga('set', 'transport', 'beacon');
         ga('send', 'pageview')
     </script>
-    <script src="https://www.google-analytics.com/analytics.js" async=""></script>
+    <script src="https://www.google-analytics.com/analytics.js " async=" "></script>
 </body>
 
 </html>
