duplicated pages, made nav modifications, added new assets, started adding base item content structure

--- a/F22/Advanced-Interface-using-CSS-COMP2081/project/miniParts.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/project/miniParts.html
@@ -66,8 +66,8 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                 <li class="breadcrumb-item" aria-current="page"><a href="#">Shop</a></li>
-                <li class="breadcrumb-item"><a href="#">Original Models</a></li>
-                <li class="breadcrumb-item active" aria-current="page">cars</li>
+                <li class="breadcrumb-item"><a href="#">Minis</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Parts</li>
             </ol>
         </nav>
 
@@ -79,19 +79,19 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Original Models</a>
                         <ul class="dropdown-menu nav-item ">
-                            <li><a class="dropdown-item nav-link active" href="#">Cars</a></li>
-                            <li><a class="dropdown-item nav-link" href="#">Parts</a></li>
+                            <li><a class="dropdown-item nav-link" href="./originalCars.html">Cars</a></li>
+                            <li><a class="dropdown-item nav-link " href="./originalParts.html">Parts</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Mini's</a>
                         <ul class="dropdown-menu nav-item">
-                            <li><a class="dropdown-item nav-link" href="#">Cars</a></li>
-                            <li><a class="dropdown-item nav-link" href="#">Parts</a></li>
+                            <li><a class="dropdown-item nav-link" href="./miniCars.html">Cars</a></li>
+                            <li><a class="dropdown-item nav-link active" href="./miniParts.html">Parts</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Apparel</a>
+                        <a class="nav-link" aria-current="page" href="./apparel.html">Apparel</a>
                     </li>
                 </ul>
             </nav>
@@ -100,23 +100,23 @@
             </article>
         </aside>
         <section>
-            <h2>Shop Original Automoblox Sets</h2>
+            <h2>Shop Mini Automoblox Parts</h2>
             <section>
                 <div class="tab-content" id="tabContentExcerpt">
                     <div class="tab-pane fade  show active" id="car1" role="tabpanel" aria-labelledby="car2Toggler">
-                        <h2>car1</h2>
+                        <h2>mini-part1</h2>
                     </div>
                     <div class="tab-pane fade" id="car2" role="tabpanel" aria-labelledby="car1Toggler">
-                        <h2>car2</h2>
+                        <h2>mini-part2</h2>
                     </div>
                     <div class="tab-pane fade" id="car3" role="tabpanel" aria-labelledby="car3Toggler">
-                        <h2>car3</h2>
+                        <h2>mini-part3</h2>
                     </div>
                     <div class="tab-pane fade" id="car4" role="tabpanel" aria-labelledby="car4Toggler">
-                        <h2>car4</h2>
+                        <h2>mini-part4</h2>
                     </div>
                     <div class="tab-pane fade" id="car5" role="tabpanel" aria-labelledby="car5Toggler">
-                        <h2>car5</h2>
+                        <h2>mini-part5</h2>
                     </div>
                 </div>
                 <div class="tab-pane" id="excerpt" role="tabpanel" aria-labelledby="excerptButton">
